fixes icecream icon on contact page, maybe fixes background

--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,12 @@
         <div>
             <main>
                 <div class="contact-banner">
-                    <img class="icecream-stick" src="/images/ice-cream.png" alt="ice cream on stick">
+                    <img class="icecream-stick" src="images/ice-cream.png" alt="ice cream on stick">
                     <div>
                         <h1>Come Visit Us at Our Elgin Street Location</h1>
                         <h2>A tasty surprise is waiting for you!</h2>
                     </div>
-                    <img class="icecream-stick" src="/images/ice-cream.png" alt="ice cream on stick">
+                    <img class="icecream-stick" src="images/ice-cream.png" alt="ice cream on stick">
                 </div>
                 <div class="contact-container">
                     <div class="location">
