--- a/contact.html
+++ b/contact.html
@@ -97,10 +97,15 @@
         </div>
         <div class="footer">
             <footer>
-            &copy; Beechwood Ice Cream 2021 
                 <a href="#" id="socialicon"><ion-icon name="logo-instagram"></ion-icon></a>
                 <a href="#" id="socialicon"><ion-icon name="logo-facebook"></ion-icon></a>
                 <a href="#" id="socialicon"><ion-icon name="logo-twitter"></ion-icon></a>
+                <p>
+                     &copy; Beechwood Ice Cream 2021
+                </p>
+                <p>
+                    Photos and Icons from <a href="https://stock.adobe.com/ca/">Adobe Stock</a>
+                </p> 
             </footer>
         </div>
     </div>
