--- a/index.html
+++ b/index.html
@@ -38,10 +38,16 @@
             </main>
         </div>
         <div class="footer">
-            <footer>&copy; Beechwood Ice Cream 2021
+            <footer>
                 <a href="#" id="socialicon"><ion-icon name="logo-instagram"></ion-icon></a>
                 <a href="#" id="socialicon"><ion-icon name="logo-facebook"></ion-icon></a>
                 <a href="#" id="socialicon"><ion-icon name="logo-twitter"></ion-icon></a>
+                <p>
+                     &copy; Beechwood Ice Cream 2021
+                </p>
+                <p>
+                    Photos and Icons from <a href="https://stock.adobe.com/ca/">Adobe Stock</a>
+                </p> 
             </footer>
         </div>
     </div>
