--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
                 <a href="#" id="socialicon"><ion-icon name="logo-instagram"></ion-icon></a>
                 <a href="#" id="socialicon"><ion-icon name="logo-facebook"></ion-icon></a>
                 <a href="#" id="socialicon"><ion-icon name="logo-twitter"></ion-icon></a>
+                <div class="footer-text">
                 <p>
                      &copy; Beechwood Ice Cream 2021
                 </p>
                 <p>
                     Photos and Icons from <a href="https://stock.adobe.com/ca/">Adobe Stock</a>
                 </p> 
+                </div>
             </footer>
         </div>
     </div>
