Adds HTML & CSS comments

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="container">
         <div class="header-container">
             <header>
+                <!-- ///// Nav Section \\\\\ -->
                 <nav class="nav">
                     <ul class="nav-list">
                         <li><img class="mobile-logo" src="images/mobilelogo.png" alt="logo"></li>
@@ -32,11 +33,13 @@
         </div>
         <div>
             <main>
+                <!-- ///// Banner Section \\\\\ -->
                 <div class="welcome-banner">
-                    <h1 class="welcome-text">A Flavor for Every Mood! </h1>
+                    <h1 class="welcome-text">A Flavor for Every Mood&#33;</h1>
                 </div>
             </main>
         </div>
+        <!-- ///// Footer Section \\\\\ -->
         <div class="footer">
             <footer>
                 <a href="#" id="socialicon"><ion-icon name="logo-instagram"></ion-icon></a>
@@ -53,6 +56,7 @@
             </footer>
         </div>
     </div>
+    <!-- ///// Social Media Icon Link \\\\\ -->
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
