--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Custom style link -->
     <link rel="stylesheet" href="css/main.css">
     <!-- Icon link  -->
      <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css">
@@ -17,6 +18,7 @@
     <div class="container">
         <div class="header-container">
             <header>
+                <!-- ///// Nav Section \\\\\ -->
                 <nav class="nav">
                     <ul class="nav-list">
                         <li><img class="mobile-logo" src="images/mobilelogo.png" alt="logo"></li>
@@ -31,38 +33,41 @@
         </div>
         <div>
             <main>
+                <!-- ///// Banner Section \\\\\ -->
                 <div class="flavor-banner">
                     <img class="icecream-cup" src="images/ice-cream-cup.png" alt="ice-cream-cup">
                     <div>
                         <h1 class="flavor-text">Try Our New Limited Time Flavors</h1>
-                        <h2 class="sub-flavor-text"> Get them before they're gone!</h2>
+                        <h2 class="sub-flavor-text"> Get them before they're gone&#33;</h2>
                     </div>
                     <img class="icecream-cup" src="images/ice-cream-cup.png" alt="ice-cream-cup">
                 </div>
+                <!-- ///// Menu Section \\\\\ -->
                 <div class="menu-container">
                     <div class="menu-section">
                         <section class="green">
                             <img src="images/icecream-green-320.png" alt="green ice cream">
                             <h3>Lazy-Lime</h3>
-                            <p>All Natural Ingredients, 12oz Pint</p>
+                            <p>All Natural Ingredients&#44; 12oz Pint</p>
                             <a href="#" id="add-cart-button">Add to Cart</a>
                         </section>
                         <section class="pink">
                             <img src="images/icecream-pink-320.png" alt="pink ice cream">
                             <h3>Rosy Romantic</h3>
-                            <p>All Natural Ingredients, 12oz Pint</p>
+                            <p>All Natural Ingredients&#44; 12oz Pint</p>
                             <a href="#" id="add-cart-button">Add to Cart</a>
                         </section>
                         <section class="blue">
                             <img src="images/icecream-blue-320.png" alt="Blue ice cream">
                             <h3>Beautiful Blueberry</h3>
-                            <p>All Natural Ingredients, 12oz Pint</p>
+                            <p>All Natural Ingredients&#44; 12oz Pint</p>
                             <a href="#" id="add-cart-button">Add to Cart</a>
                         </section>
                     </div>    
                 </div>
             </main>
         </div>
+        <!-- ///// Footer Section \\\\\ -->
         <div class="footer">
             <footer>
                 <a href="#" id="socialicon"><ion-icon name="logo-instagram"></ion-icon></a>
@@ -77,6 +82,7 @@
             </footer>
         </div>
     </div>
+    <!-- ///// Social Media Icon Link \\\\\ -->
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
