--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Custom style link -->
     <link rel="stylesheet" href="css/main.css">
     <!-- Icon link  -->
     <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css">
@@ -18,6 +19,7 @@
     <div class="container">
         <div class="header-container">
             <header>
+                <!-- ///// Nav Section \\\\\ -->
                     <nav class="nav">
                         <ul class="nav-list">
                             <li><img class="mobile-logo" src="images/mobilelogo.png" alt="logo"></li>
@@ -32,14 +34,16 @@
         </div>
         <div>
             <main>
+                <!-- ///// Banner Section \\\\\ -->
                 <div class="contact-banner">
                     <img class="icecream-stick" src="images/ice-cream.png" alt="ice cream on stick">
                     <div>
                         <h1>Come Visit Us at Our Elgin Street Location</h1>
-                        <h2>A tasty surprise is waiting for you!</h2>
+                        <h2>A tasty surprise is waiting for you&#33;</h2>
                     </div>
                     <img class="icecream-stick" src="images/ice-cream.png" alt="ice cream on stick">
                 </div>
+                <!-- ///// Contact Section \\\\\ -->
                 <div class="contact-container">
                     <div class="location">
                         <h1>Location</h1>
@@ -74,12 +78,12 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Monday - Friday</td>
-                                    <td>11AM - 8PM</td>
+                                    <td>Monday &#45; Friday</td>
+                                    <td>11AM &#45; 8PM</td>
                                 </tr>
                                 <tr>
                                     <td>Saturday</td>
-                                    <td>11AM - 6PM</td>
+                                    <td>11AM &#45; 6PM</td>
                                 </tr>
                                 <tr>
                                     <td>Sunday</td>
@@ -95,6 +99,7 @@
                 </div>
             </main>
         </div>
+        <!-- ///// Footer Section \\\\\ -->
         <div class="footer">
             <footer>
                 <a href="#" id="socialicon"><ion-icon name="logo-instagram"></ion-icon></a>
@@ -109,6 +114,7 @@
             </footer>
         </div>
     </div>
+    <!-- ///// Social Media Icon Link \\\\\ -->
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
