--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li><a class="current" href="index.html">Home</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><button class="nav-button" type="submit"><i class="im im-shopping-cart"></i></button></li>
+                        <li><a href=""><i class="im im-shopping-cart"></i></a></li>
                     </ul>
                 </nav>
         </header>
